# Holyvoice

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  teste.html  update-github.sh
backend/: alembic.ini  init_db.py  requirements.txt  reset_db.sh  test_youtube_api.py
backend/alembic/: env.py
backend/alembic/versions/: add_monitoring_video_columns.py  create_monitoring_playlist_table.py  create_monitoring_tables.py  create_user_table.py  create_youtube_tables.py  fix_interval_time_type.py  update_interval_time_column.py  update_monitoring_interval_enum.py  update_monitoring_status_enum.py
backend/app/: deps.py  main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  celery_app.py  config.py  password.py  security.py
backend/app/crud/: __init__.py  base.py  crud_monitoring.py  crud_user.py  crud_youtube.py  monitoring.py  youtube.py
backend/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/models/: __init__.py  monitoring.py  user.py  youtube.py
backend/app/schemas/: __init__.py  monitoring.py  token.py  user.py  video.py  youtube.py
backend/app/services/: monitoring_processor.py  youtube.py
backend/app/worker/: monitoring.py
docs/: README.md  auth.md  monitoring.md  prompt.md  roadmap.md  video-download.md  video_download.md  video_download_technical.md  youtube-channels.md
docs/auth/: README.md  authentication.md
frontend/: jsconfig.json  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: icons.tsx
(+47 files in other folders)
