[project]
name = "holyvoice"
version = "0.1.0"
description = ""
authors = [
    {name = "Wallace Laia"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
    "yt-dlp (>=2023.12.30)",
    "pytube (>=15.0.0)",
    "googletrans (>=3.1.0a0)",
    "gtts (>=2.3.2)",
    "pyttsx3 (>=2.90)",
    "moviepy (>=1.0.3)",
    "speechrecognition (>=3.10.0)",
    "pydub (>=0.25.1)",
    "numpy (>=1.24.0)",
    "requests (>=2.31.0)",
    "tqdm (>=4.66.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
